# to25-solver

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  results.cpp  results.hpp
libto25-solver/: CMakeLists.txt
libto25-solver/include/to25-solver/: board.hpp  resultbase.hpp  solver.hpp  types.hpp
libto25-solver/src/: solver.cpp
src/: CMakeLists.txt  board.cpp  board.hpp  main.cpp  results.cpp  results.hpp  solver.cpp  solver.hpp  types.hpp
tests/: CMakeLists.txt  boardtests.cpp  solvertests.cpp
